# mots

./: .coveragerc  .flake8  .gitignore  .readthedocs.yaml  AUTHORS  Makefile  README.md  docker-compose.yml  mots.rst  mots.yaml  pyproject.toml  requirements.in  requirements.txt  setup.cfg
.circleci/: config.yml
.github/workflows/: run-compile-requirements.yml  test.yml
documentation/: conf.py  index.rst
requirements/: base.in  get_filename  python3.10.txt  python3.11.txt  python3.12.txt  python3.13.txt  python3.6.txt  python3.7.txt  python3.8.txt  python3.9.txt  requirements-3.10-Linux.txt  requirements-3.10-Windows.txt  requirements-3.10-macOS.txt  requirements-3.7-Linux.txt  requirements-3.7-Windows.txt  requirements-3.7-macOS.txt  requirements-3.8-Linux.txt  requirements-3.8-Windows.txt  requirements-3.8-macOS.txt  requirements-3.9-Linux.txt  requirements-3.9-Windows.txt  requirements-3.9-macOS.txt
src/mots/: __init__.py  bmo.py  ci.py  cli.py  config.py  directory.py  export.py  logging.py  mach_interface.py  module.py  pmo.py  settings.py  utils.py  yaml.py
src/mots/templates/: directory.template.md  directory.template.rst
tests/: conftest.py  test_cli.py  test_config.py  test_directory.py  test_export.py  test_module.py  test_settings.py  test_style.py  test_utils.py
