# This Source Code Form is subject to the terms of the Mozilla Public
# License, v. 2.0. If a copy of the MPL was not distributed with this
# file, You can obtain one at https://mozilla.org/MPL/2.0/.

[metadata]
name = mots
version = 0.0.1.a0
author = Zeid Zabaneh
author_email = zeid@mozilla.com
description =  Module Ownership in Tree System
long_description = "Full documentation can be found at https://mots.readthedocs.io/en/latest/."
long_description_content_type = text/markdown
url = https://github.com/mozilla-conduit/mots
classifiers =
	License :: OSI Approved :: Mozilla Public License 2.0 (MPL 2.0)
    Development Status :: 3 - Alpha
    Intended Audience :: Developers
    Operating System :: OS Independent
    Programming Language :: Python :: 3

[options]
package_dir =
    = src
packages = find:
python_requires = >=3.7
install_requires =
    ruamel.yaml==0.17.16
    importlib-resources==5.4.0; python_version < "3.9"

[options.packages.find]
where = src

[options.entry_points]
console_scripts =
    mots = mots.cli:main

[options.package_data]
* = *.template.rst
